Fix introduced bug: file tree view was too tall and would cause the UI jump up sometimes

--- a/ide/app/spark_polymer.css
+++ b/ide/app/spark_polymer.css
@@ -327,7 +327,6 @@ button.ace_searchbtn_close:active {
   position: absolute;
   top: 48px;
   width: 100%;
-  height: 100%;
 }
 
 #fileViewArea .listview-container {
